# gp-cg-lec6

./: CMakeLists.txt  lecture_6.cpp  lecture_6.h  main.cpp  vector.cpp  vector.h
cmake/: FindSDL2TTF.cmake
